Removed Java9, will be relevant for a separate project.