@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.raumzeitfalle.fxsamples.pocketcalculator</groupId>
-    <artifactId>EnterpriseAppSample</artifactId>
+    <artifactId>fxml-sample</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,41 +19,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                            <configuration>
-                            <!-- compile everything to ensure module-info contains right entries -->
-                            <!-- required when JAVA_HOME is JDK 8 or below -->
-                            <jdkToolchain>
-                                <version>9</version>
-                            </jdkToolchain>
-                            <release>9</release>
-                            <compilerArgs>
-                                <arg>-J--add-reads javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
-                                <arg>-J--add-exports javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>base-compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <!-- recompile everything for target VM except the module-info.java -->
-                        <configuration>
-                            <excludes>
-                                <exclude>module-info.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
                 <configuration>
-                    <!-- jdkToolchain required when JAVA_HOME is JDK 9 or above -->
-                    <jdkToolchain>
-                        <version>[1.8,9)</version>
-                    </jdkToolchain>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
@@ -88,13 +54,6 @@
                         </configuration>
                     </execution>
                 </executions>
-                <!--
-                <configuration>
-                    <systemPropertyVariables>
-                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
-                    </systemPropertyVariables>
-                </configuration>
-                //-->
             </plugin>
             <plugin>
                 <groupId>com.zenjava</groupId>
@@ -136,7 +95,7 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit</artifactId>
-            <version>4.0.7-alpha</version>
+            <version>4.0.8-alpha</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
